[package]
name = "rustoracer"
version = "0.1.7"
edition = "2024"

[lib]
name = "rustoracer"
crate-type = ["cdylib"]

[dependencies]
image = "0.25.9"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.19 "
r2r = { version = "0.9.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
pyo3 = "0.28.1"
numpy = "0.28.0"

[features]
ros = ["dep:r2r", "dep:tokio", "dep:futures"]
