[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rustoracerpy"
description = "A Python/gym wrapper for the Rustoracer library."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["gymnasium>=1.1.1", "matplotlib>=3.10.8", "numpy>=2.4.2"]

[tool.maturin]
module-name = "rustoracerpy.rustoracer"
features = ["python"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
    { file = "rustoracerpy/**/*.py" },
]
